fixtures/cs-jwt-02/good/named-import-with-algorithms.ts
import { verify } from "jsonwebtoken";

const secret = process.env.JWT_SECRET ?? "dev-secret";

export function readToken(token: string) {
	return verify(token, secret, { algorithms: ["HS256"] });
}
