fixtures/cs-jwt-02/bad/verify-named-import-alias.ts
import { verify as v } from "jsonwebtoken";

const secret = process.env.JWT_SECRET ?? "dev-secret";

export function readToken(token: string) {
	return v(token, secret);
}
